IF(MSVC)
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /O1 /Ob0 /GL /GF /Oy /Gy /GA")
	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DYNAMICBASE:NO /MANIFEST:NO /OPT:REF /OPT:ICF /LTCG")
ELSE()
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os")
ENDIF()

add_executable( hexheader main.c )